<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/box_7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/box_6"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/box_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_6"
        tools:layout_editor_absoluteY="128dp" />

    <TextView
        android:id="@+id/box_8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/box_6"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_7"
        tools:layout_editor_absoluteY="128dp" />

    <TextView
        android:id="@+id/box_3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/Box_3"
        android:textAlignment="center"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toStartOf="@+id/box_4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_2"
        tools:layout_editor_absoluteY="32dp" />

    <TextView
        android:id="@+id/box_2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/Box_2"
        android:textAlignment="center"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toStartOf="@+id/box_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Box_1"
        tools:layout_editor_absoluteY="32dp" />

    <TextView
        android:id="@+id/Box_1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/Box1"
        android:textAlignment="center"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toStartOf="@+id/box_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="32dp" />

    <TextView
        android:id="@+id/box_4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/Box_4"
        android:textAlignment="center"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_3"
        tools:layout_editor_absoluteY="32dp" />

    <TextView
        android:id="@+id/Score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Score_label"
        app:layout_constraintTop_toBottomOf="@+id/box_15"
        app:layout_constraintVertical_bias="0.13999999" />

    <TextView
        android:id="@+id/Score_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_label"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Score_text"
        app:layout_constraintEnd_toStartOf="@+id/Score_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/box_5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/box_5"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/box_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="128dp" />

    <TextView
        android:id="@+id/box_13"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/box_5"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/box_14"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="320dp" />

    <TextView
        android:id="@+id/box_14"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/box_5"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/box_15"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_13"
        tools:layout_editor_absoluteY="320dp" />

    <TextView
        android:id="@+id/box_15"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/box_5"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/box_16"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_14"
        tools:layout_editor_absoluteY="320dp" />

    <TextView
        android:id="@+id/box_16"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/box_5"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_15"
        tools:layout_editor_absoluteY="320dp" />

    <TextView
        android:id="@+id/box_10"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/box_5"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/box_11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_9"
        tools:layout_editor_absoluteY="224dp" />

    <TextView
        android:id="@+id/box_11"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/box_5"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="224dp" />

    <TextView
        android:id="@+id/box_12"
        style="@style/Memory_Box"
        android:layout_marginEnd="16dp"
        android:text="@string/box_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/box_11"
        tools:layout_editor_absoluteY="224dp" />

    <TextView
        android:id="@+id/box_9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/box_5"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/box_10"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="224dp" />

    <TextView
        android:id="@+id/box_6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/box_6"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/box_7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_5"
        tools:layout_editor_absoluteY="128dp" />

</androidx.constraintlayout.widget.ConstraintLayout>